fix(tooltip): fixed width issue on safari (#263)
* fix(component props): adjustet margin on anchor body on mobile sizes

* refactor(app-copy): adjustet min width on app-copy component

* fix(app-copy): removed inline-flex

* fix(app-copy): fixed mispelling in content class scss

* style(app-copy): updated width on content

* docs: test

* refactor(tooltip): added min width

* fix(tooltip): fixed tooltip width issue on safari

* chore: cleanup

* chore: bumped version

--- a/src/app/shared/component-properties/component-properties.component.scss
+++ b/src/app/shared/component-properties/component-properties.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../style/elvis/src/utilities/breakpoints.scss';
+
 .properties-header {
   display: flex;
   align-items: center;
@@ -5,7 +7,12 @@
 }
 .elvis-anchor-body {
   margin: 0 105px;
+
+  @include breakpoint-up(Mobile) {
+    margin: 0 55px;
+  }
 }
+
 .e-list li::before {
   top: 11px;
 }
