--- a/src/app/shared/copy/copy.component.scss
+++ b/src/app/shared/copy/copy.component.scss
@@ -1,7 +1,7 @@
 .e-tooltip {
   display: inline-flex;
 
-  &_content {
+  &__content {
     line-height: 120%;
     font-size: 16px;
   }
