--- a/style/elvis/src/components/tooltip.scss
+++ b/style/elvis/src/components/tooltip.scss
@@ -31,7 +31,7 @@ $tooltip-vertical-transform: translate(-50%, 0);
     position: absolute;
     opacity: 0;
     z-index: -1;
-    width: max-content;
+    width: auto;
     background-color: colors.color('grey-80');
     padding: 6px 8px;
     border-radius: 4px;
